--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,19 +3,21 @@
 <!-- Header -->
 <header class="header">
 
+	{% if settings.sidebar == 1 %}
 	<a href="#" class="menu-btn"><span></span></a>
-	
+	{% endif %}
+
 	<!-- menu -->
 	<div class="top-menu">
 		<ul>
 			{% for nav in navigation %}
-			<li{% if navigation.first.slug == nav.slug %} class="active"{% endif %}>
+			<li{% if navigation.first.slug == nav.slug %} class="active" {% endif %}>
 				<a href="{{ site.url }}/#{{ nav.slug }}-card">
 					<span class="icon ion-{{ nav.icon }}"></span>
 					<span class="link">{{ nav.title }}</span>
 				</a>
-			</li>
-			{% endfor %}
+				</li>
+				{% endfor %}
 		</ul>
 	</div>
 
