--- a/_sass/ryancv/layout.scss
+++ b/_sass/ryancv/layout.scss
@@ -727,6 +727,9 @@
 		height: calc(100vh - 102px);
 		min-height: 560px;
 	}
+	.card-started .profile.no-photo .title {
+		margin-top: 100px;
+	}
 }
 
 /* content */
